--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
-    "body-parser": "^1.20.2"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.4"
   }
 }
