--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.19",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4"
   }
