--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "ts": "npx tsc ./server/server.ts",
+    "js": "node ./server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +22,8 @@
     "@types/node": "^20.11.19",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "dotenv": "^16.4.4"
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.4",
+    "nodemailer": "^6.9.9"
   }
 }
