--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "ts": "npx tsc ./server/server.ts",
     "js": "node ./server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "esbuild": "^0.20.1",
     "express": "^4.18.2",
     "prisma": "^5.9.1",
     "typescript": "^5.3.3"
@@ -22,8 +23,12 @@
     "@types/node": "^20.11.19",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chai": "^5.1.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.4",
-    "nodemailer": "^6.9.9"
+    "mocha": "^10.3.0",
+    "nodemailer": "^6.9.9",
+    "quickjs-emscripten": "^0.29.0",
+    "rollup-plugin-commonjs": "^10.1.0"
   }
 }
