--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "js": "node ./server/server.js",
     "prisma:format": "yarn prisma format",
     "prisma:generate": "yarn prisma generate",
-    "prisma:migrate:dev": "yarn prisma migrate dev"
+    "prisma:migrate:dev": "yarn prisma migrate dev",
+    "prepare": "husky",
+    "precommit": "bash .husky/pre-commit",
+    "pre-commit": "echo \"Custom pre-commit hook\""
   },
   "keywords": [],
   "author": "",
@@ -30,9 +33,16 @@
     "chai": "^5.1.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.4",
+    "husky": "^9.0.11",
     "mocha": "^10.3.0",
     "nodemailer": "^6.9.9",
     "quickjs-emscripten": "^0.29.0",
     "rollup-plugin-commonjs": "^10.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "sh .husky/pre-commit",
+      "prepare-commit-msg": "npm run pre-commit"
+    }
   }
 }
